--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="glucometers">Glucometer(s)</string>
 
 
+    <string name="arrow_folded">arrow_folded</string>
+    <string name="arrow_collapsed">arrow_collapsed</string>
+
+
 </resources>
