Final push of the day

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
 
     <string name="arrow_folded">arrow_folded</string>
     <string name="arrow_collapsed">arrow_collapsed</string>
+    <string name="medical_devices">Medical Devices</string>
 
 
 </resources>
